--- a/frontend/src/pages/Products/style.css
+++ b/frontend/src/pages/Products/style.css
@@ -39,17 +39,17 @@
     padding: 2px;
     border-radius: 5px;
     transition: background-color 0.2s;
-    transition: color 0.1s;
+    /*transition: color 0.1s;*/
 }
 
 .product-container ul li .option-button .delete:hover {
-    background-color: #cecece;
-    color: #dd3849;
+    background-color: #dc3545;
+    color: #eeeeee;
 }
 
 .product-container ul li .option-button .edit:hover {
-    background-color: #cecece;
-    color: #299141;
+    background-color: #17a2b8;
+    color: #eeeeee;
 }
 
 .fab {
