modal new product fixes

--- a/frontend/src/pages/Products/NewProduct/style.css
+++ b/frontend/src/pages/Products/NewProduct/style.css
@@ -1,6 +1,7 @@
 .modal-produto {
     width: 100%;
     max-width: 1000px;
+    color: #41414d;
 }
 
 .input-field {
@@ -8,7 +9,7 @@
 }
 
 .modal-content h1 {
-    margin-bottom: 50px;
+    margin: 20px 0 50px 0;
 }
 
 .input-group {
@@ -27,3 +28,46 @@ input::-webkit-inner-spin-button {
 input[type=number] {
   -moz-appearance: textfield;
 }
+
+.botao-cancelar {
+  background: #dd3333;
+  margin-right: 15px !important;
+  box-shadow: 0;
+}
+
+.botao-confirmar {
+  background: #3085d6;
+  box-shadow: 0;
+}
+
+.botao-cancelar:hover {
+  background: #dd3333;
+  background-image: linear-gradient(rgba(0,0,0,.1),rgba(0,0,0,.1));
+}
+
+.botao-confirmar:hover {
+  background: #3085d6;
+  background-image: linear-gradient(rgba(0,0,0,.1),rgba(0,0,0,.1));
+}
+
+.modal-footer {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+
+/* label focus color */
+.input-field input:focus + label {
+  color: #3085d6 !important;
+}
+/* label underline focus color */
+.input-field input:focus {
+  border-bottom: 1px solid #3085d6 !important;
+  box-shadow: 0 1px 0 0 #3085d6 !important;
+}
+
+/* icon prefix focus color */
+.input-field .prefix.active {
+  color: #3085d6;
+}
+     
