--- a/frontend/src/pages/Menu/style.css
+++ b/frontend/src/pages/Menu/style.css
@@ -23,3 +23,9 @@
 .subheader {
     background-color: #eeeeee;
 }
+
+button {
+    border: 0;
+    background-color: transparent;
+    color: #ffffff;
+}
