--- a/frontend/src/pages/Products/style.css
+++ b/frontend/src/pages/Products/style.css
@@ -62,7 +62,7 @@
 
 .product-container ul li strong {
     display: block;
-    margin-bottom: 16px;
+    /*margin-bottom: 16px;*/
     color: #41414d;
     font-weight: bold;
 }
@@ -71,4 +71,9 @@
     display: block;
     margin-bottom: 10px;
     color: #737380;
+}
+
+button {
+    border: 0;
+    margin-left: 10px;
 }
