--- a/frontend/src/pages/Customers/NewCustomer/style.css
+++ b/frontend/src/pages/Customers/NewCustomer/style.css
@@ -71,3 +71,22 @@ input[type=number] {
   color: #3085d6;
 }
      
+[type="radio"]:checked + span:after,
+ 
+[type="radio"].with-gap:checked + span:before,
+ 
+[type="radio"].with-gap:checked + span:after {
+ 
+  border: 2px solid #3085d6;
+ 
+}
+ 
+ 
+ 
+[type="radio"]:checked + span:after,
+ 
+[type="radio"].with-gap:checked + span:after {
+ 
+  background-color: #3085d6;
+ 
+}
