--- a/frontend/src/pages/Negotiation/style.css
+++ b/frontend/src/pages/Negotiation/style.css
@@ -12,7 +12,7 @@
 
 .negotiation-container {
     display: flex;
-    max-width: 90%;
+    width: 100%;
 	margin: 25px auto;
     border: 1px solid #ccc;
     
@@ -31,4 +31,80 @@
     display: block;
     background: teal;
     width: 50%;
+}
+
+.item-container ul li {
+    background: #eeeeee;
+    padding: 24px;
+    border-radius: 8px;
+    position: relative;
+    border-left: 5px solid #007bff;
+}
+
+.item-container ul li .option-button {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    border: 0;
+}
+
+.item-container ul li .option-button a {
+    margin: 3px;
+}
+
+.item-container ul li .option-button i {
+    color: #232931;
+    padding: 2px;
+    border-radius: 5px;
+    transition: background-color 0.2s;
+    /*transition: color 0.1s;*/
+}
+
+.item-container ul li .option-button .delete:hover {
+    background-color: #dc3545;
+    color: #eeeeee;
+}
+
+.item-container ul li .option-button .edit:hover {
+    background-color: #17a2b8;
+    color: #eeeeee;
+}
+
+.fab {
+    background-color: #232931;
+}
+
+.fab:hover {
+    background-color: #47515e;
+}
+
+.item-container ul li strong {
+    display: block;
+    margin-right: 5px;
+    color: #41414d;
+    font-weight: bold;
+}
+
+.item-container ul li p {
+    display: block;
+    margin-bottom: 10px;
+    color: #737380;
+}
+
+.header-info {
+    margin-bottom: 10px;
+    font-size: large;
+}
+
+.info-container {
+    display: flex;
+}
+
+.divider {
+    margin-bottom: 10px;
+}
+
+.input-field {
+    width: 100%;
+    margin: 50px 0 15px 0;
 }
