--- a/frontend/src/pages/Negotiation/style.css
+++ b/frontend/src/pages/Negotiation/style.css
@@ -14,23 +14,25 @@
     display: flex;
     width: 100%;
 	margin: 25px auto;
-    border: 1px solid #ccc;
+    /*border: 1px solid #ccc;*/
     
     flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
+    align-items: flex-start;
 }
 
 .negotiation-container .item-container {
     display: block;
-    background: tomato;
     width: 100%;
 }
 
 .negotiation-container .value-container {
     display: block;
-    background: teal;
+    background: rgb(231, 231, 231);
     width: 50%;
+    border-left: 5px solid #29b6f6;
+    padding: 15px;
+    border-radius: 8px;
+    margin-top: 15px;
 }
 
 .item-container ul li {
@@ -39,6 +41,7 @@
     border-radius: 8px;
     position: relative;
     border-left: 5px solid #007bff;
+    margin: 15px 15px 0 0;
 }
 
 .item-container ul li .option-button {
@@ -107,4 +110,18 @@
 .input-field {
     width: 100%;
     margin: 50px 0 15px 0;
+}
+
+.option-buttons-container {
+    display: flex;
+    justify-content: center;
+    padding: 15px;
+}
+
+.botao-servico {
+    margin-left: 15px !important;
+  }
+
+.botao-servico:hover, .botao-produto:hover {
+    opacity: 0.9;
 }
