--- a/frontend/src/pages/Customers/NewCustomer/style.css
+++ b/frontend/src/pages/Customers/NewCustomer/style.css
@@ -9,17 +9,19 @@
 }
 
 .modal-content h1 {
-    margin: 20px 0 50px 0;
+    margin-top: 20px;
+    margin-bottom: 0;
 }
 
 .input-group {
     display: flex;
-    width: 97%;
+    height: 80px;
 }
 
 .input-radio {
-  display: flex;
-  width: 100%;
+    display: flex;
+    width: 100%;
+    padding-top: 60px;
 }
 
 .input-radio p {
@@ -41,11 +43,13 @@ input[type=number] {
 .botao-cancelar {
   background: #dd3333;
   margin-right: 15px !important;
+  margin-top: 20px !important;
   box-shadow: 0;
 }
 
 .botao-confirmar {
   background: #3085d6;
+  margin-top: 20px !important;
   box-shadow: 0;
 }
 
