--- a/frontend/src/pages/Negotiation/AddProduct/style.css
+++ b/frontend/src/pages/Negotiation/AddProduct/style.css
@@ -1,10 +1,14 @@
 .modal-add-produto {
     width: 100%;
+    height: 100%;
     max-width: 1000px;
     color: #41414d;
 }
 
-.input-field {
+.modal-content h1 {
+    margin: 20px 0 20px 0 !important;
+}
+
+.modal-content .input-field .select {
     width: 100%;
-    margin: 50px 0 15px 0;
 }
