--- a/frontend/src/pages/Products/NewProduct/style.css
+++ b/frontend/src/pages/Products/NewProduct/style.css
@@ -5,11 +5,12 @@
 }
 
 .input-field {
-    width: 97%;
+    max-width: 97%;
 }
 
 .modal-content h1 {
-    margin: 20px 0 50px 0;
+    margin-top: 20px;
+    margin-bottom: 0;
 }
 
 .input-group {
