--- a/frontend/src/pages/Products/style.css
+++ b/frontend/src/pages/Products/style.css
@@ -1,6 +1,5 @@
 .product-container {
-    width: 100%;
-    max-width: 1180px;
+    width: 90%;
     padding: 0 30px;
     margin: 32px auto;
 }
@@ -17,7 +16,7 @@
 
 /*
 .product-container ul li {
-    background: #eeeeee;
+    background: #b6b6b6;
     padding: 24px;
     border-radius: 8px;
     position: relative;
